Fix alignment for dropdown item

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -357,8 +357,8 @@ a.text-light:hover {
     }
 
     .dropdown-item {
-        margin-left: -35px;
-        padding: 0;
+        text-align: right;
+        padding-right: 5px;
     }
 
     .nav-link {
